# XSS-Data-Exfiltrator

./: .gitignore  Cargo.toml  README.md  exfil.js
src/: capture.rs  convert.rs  main.rs  process_payload.rs
